--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IntermittentFastingApp</string>
+    <string name="eatenbtnLabel">I\'ve Eaten</string>
+    <string name="eatBannerText">Eating Phase</string>
+    <string name="fastBannerText">Fasting Phase</string>
 </resources>
